<resources>
    <string name="app_name">Diber App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="activity_title_login">Sign in</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>

    <string name="password_recovery_not_impl">Password recovery not implemented now</string>

    <string name="order_price">$%1$.2f</string>
    <string name="no_data_recycler_view">There\'s nothing here.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="prompt_zipcode">Zipcode</string>
    <string name="prompt_street">Street</string>
    <string name="prompt_city">City</string>
    <string name="personal_info">Personal info</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_phone">Contact phone</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="activity_title_signup">Sign Up</string>
    <string name="activity_title_new_order">New order</string>
    <string name="activity_title_new_shop">New shop</string>
    <string name="activity_title_new_address">New address</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_price">Price ($)</string>
    <string name="action_create_order">Create</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="order_info">Order information</string>
    <string name="shop_info">Shop information</string>
    <string name="address_info">Delivery address information</string>
    <string name="delivery_address_from">Address from (Shop)</string>
    <string name="prompt_address_from">Address from</string>
    <string name="prompt_order_name">Short name</string>
    <string name="prompt_shop_name">Shop name</string>
    <string name="prompt_address_name">Name</string>
    <string name="prompt_shop_address">Shop address</string>
    <string name="prompt_address_country">Country</string>
    <string name="prompt_address_city">City</string>
    <string name="prompt_address_region">Region</string>
    <string name="prompt_address_address">Address</string>
    <string name="prompt_address_postalcode">Postal code</string>
    <string name="prompt_address_phone">Phone</string>
    <string name="dialog_new_shop_title">New shop</string>
    <string name="dialog_new_shop_create">Add</string>
    <string name="dialog_new_shop_cancel">Cancel</string>
    <string name="prompt_address">Address</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="drawer_logout">Logout</string>
    <string name="activity_title_addresses">Addresses</string>
    <string name="activity_title_shops">Shops</string>
    <string name="activity_title_orders">Orders</string>
    <string name="activity_title_profile">Profile</string>
    <string name="activity_title_order">Order</string>
    <string name="activity_title_request">Request Details</string>

</resources>
